# Dixiyang

./: .env.example  .gitignore  AGENTS.md  README.md
DixyangFast/: .gitignore  03.RAG理论基础.md  README.md  md2docx.py  pyproject.toml  requirements-rag.txt  requirements.txt  start_rag.sh
DixyangFast/daily-log/: README.md  main.py  实训日志-7.7.md  附件2：实训日志模板 (1).docx
DixyangFast/daily-log/app/: config.py  main.py
DixyangFast/daily-log/app/chat/Controller/: ChatController.py
DixyangFast/daily-log/app/chat/DAO/: ChatDAO.py
DixyangFast/daily-log/app/templates/: index.html
DixyangFast/daily-log/static/: test.html
DixyangFast/docs/: Dixiyang全功能测试实例.md  RAG模块接口文档.md  RTX4060向量化完全指南.md  STORAGE_MIGRATION.md
DixyangFast/python_api/: main.py
DixyangFast/scripts/: migrate_character_extra.py  migrate_user_config.py  start_chromadb.py
DixyangFast/src/dixiyang/: config.py  main.py
DixyangFast/src/dixiyang/docs/: 重写接口文档.md
DixyangFast/src/dixiyang/models/: __init__.py  character.py  chat_session.py  email_verification.py  file.py  novel.py  novel_relation.py  story_node.py  timeline.py  user.py  user_config.py
DixyangFast/src/dixiyang/routers/: auth.py  character.py  chat.py  chat_history.py  file.py  novel.py  rag.py  story_node.py  timeline.py  user.py  user_config.py
DixyangFast/src/dixiyang/schemas/: auth.py  character.py  chat.py  chat_history.py  novel.py  story_node.py  timeline.py
DixyangFast/src/dixiyang/services/: auth_service.py  chain_file_manager.py  character_service.py  chat_history_service.py  chat_service.py  conversation_mode.py  email_service.py  embeddings.py  knowledge_search_tool.py  novel_service.py  novel_tools.py  prompt_templates.py  storage_service.py  story_node_service.py  timeline_service.py  user_config_service.py
DixyangFast/src/dixiyang/utils/: auth_deps.py  database.py  jwt.py  response.py
rag-shared/: README.md  pyproject.toml
rag-shared/config/: rag_base.yaml  rag_r5_5600u.yaml  rag_rtx_4060.yaml
rag-shared/python/rag_shared/: __init__.py  config.py  embeddings.py  loaders.py  processor.py  tracker.py  vectordb.py
(+185 files in other folders)
