[project]
name = "dixiyang-python"
version = "1.0.0"
description = "Dixiyang API - 小说创作管理平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "sqlalchemy",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "bcrypt",
  "pydantic",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu" }
