[project]
name = "dixiyang-fast"
version = "1.0.0"
description = "Dixiyang RAG 课程作业 - Python 后端 (RAG 知识库构建与检索)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "bcrypt",
    "pydantic",
    "langchain-openai",
    "jinja2",
]

# 共享库已通过 uv pip install -e ../rag-shared 安装
# torch 由 rag-shared 的 optional-dependencies 提供

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
