[project]
name = "dixiyang-rag-shared"
version = "0.1.0"
description = "Dixiyang 共享 RAG 库 - 多硬件适配、多数据源处理、向量检索"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "chromadb>=1.5.9",
    "langchain-text-splitters>=0.3.4",
    "langchain-huggingface>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0.0"]
cpu = ["torch>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/rag_shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"